2001-09-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-use-mule-ucs): Strict checking.
	(w3m-euc-japan-decode): Use `write-multibyte-character' except
	Mule2 and XEmacs21.1.
	(w3m-find-file): Refer `coding-system-for-read' which is specified
	by `universal-coding-system-argument'.

	* w3m-xmas.el (w3m-euc-japan-decoder): Removed.

2001-09-09  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* shimbun/sb-yahoo.el: Follow the renewal of the Web site.

	* README.shimbun.ja: Ditto.

	* shimbun/sb-nikkei.el (shimbun-nikkei-groups): Apply the patch
	posted by Takenobu Sugiyama <sugiyama@ae.advantest.co.jp> in
	[emacs-w3m 01452].

	* README.shimbun.ja: Ditto.

2001-09-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-use-mule-ucs): New user option.
	(w3m-input-coding-system): Changed default value.
	(w3m-async-exec): Ditto.
	(w3m-process-connection-type) [Solaris]: Changed default value.
	(w3m-entity-alist): Enlarge a regular expression.
	(w3m-ucs-to-char): New function.
	(w3m-euc-japan-encoder): Follow the change of `w3m-ucs.el'.

	* w3mhack.el (w3mhack-examine-modules): Handle `w3m-ucs.el'.

	* w3m-ucs.el: New file.

2001-09-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-use-toolbar): Use `w3m-image-type-available-p'.
	(w3m-image-type-available-p): Use `display-images-p' instead of
	`display-graphic-p'.
	(w3m-display-inline-image-p): Ditto.
	(w3m-display-graphic-p): Alias to `display-images-p' instead of
	`display-graphic-p'.
	(display-images-p): Make an alias to `display-graphic-p' if it is
	not available.  It is for Emacs version prior to 21.0.105.

2001-09-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-filter.el (w3m-filter-lwn.net): Add link information to next
	page.

2001-08-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-load-list): Retry to read a file when failed.

2001-08-26  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* README.shimbun.ja: Add information on nikkansports.
